--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -38,17 +38,16 @@ body {
 
 /* Les titres */
 h1 {
-    font-family: "Raleway", sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 3.1rem;
 }
 
 h2 {
-    font-family: "Raleway", sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 1.5rem;
     color: #17abb3;
 }
 
-h3 {
-    font-family: "Raleway", sans-serif;
-    font-size: 1.25rem;
+h1, h2 {
+    font-weight: 400;
 }
